crates/swc_ecma_parser/tests/test262-error-references/fail/90450253498eeb10.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/90450253498eeb10.js:2:1
  |
2 | 10;
  | ^^

